--- a/index.html
+++ b/index.html
@@ -46,82 +46,100 @@
                     <div class="cmtl_copy"></div>
                 </div>
             </div>
+            <div class="select_all">
+                <div class="select_text">
+                    Select active
+                </div>
+            </div>
             <div class="cm_contain">
-                <div class="cmc_left">
-                    <div class="select">
-                        Select active
+                <!-- <div class="cmc_left"> -->
+                <!-- </div> -->
+                <div class="cmc_right">
+                    <div class="cmcr_boder cmcr_cat">
+                            <div class="circle"><img class="circle_img" src="./img/Group 2953.svg" alt=""></div>
+                            <div class="text">HelloKitty/TRX Pair Staking</div>
+                            <div class="apy">
+                                <div class="a_text">APY:</div>
+                                <div class="a_number">0.000000%</div>
+                            </div>
+                            <div class="time">
+                                <div class="t_text">Time:</div>
+                                <div class="t_number">92:16:52</div>
+                            </div>
+                            <div class="select select_text">Select</div>
+                    </div>
+                    <div class="cmcr_boder cmcr_rabit">
+                            <div class="circle"><img class="circle_img" src="./img/Group 2958.svg" alt=""></div>
+                            <div class="text">USDT Rabit</div>
+                            <div class="apy">
+                                <div class="a_text">APY:</div>
+                                <div class="a_number">0.000000%</div>
+                            </div>
+                            <div class="time">
+                                <div class="t_text">Comming soon</div>
+                                <div class="t_number">92:16:52</div>
+                            </div>
+                            <div class="select select_text">Select</div>
+                    </div>
+                    <div class="cmcr_boder cmcr_staking">
+                            <div class="circle"><img class="circle_img" src="./img/Group 2960.svg" alt=""></div>
+                            <div class="text">HelloKitty/TRX Pair Staking</div>
+                            <div class="apy">
+                                <div class="a_text">APY:</div>
+                                <div class="a_number">0.000000%</div>
+                            </div>
+                            <div class="time">
+                                <div class="t_text">Time:</div>
+                                <div class="t_number">Ended</div>
+                            </div>
+                            <div class="select select_text">Select</div>
+                    </div>
+                    <div class="cmcr_boder cmcr_tulip">
+                            <div class="circle"><img class="circle_img" src="./img/Group 2946.svg" alt=""></div>
+                            <div class="text">TAI Tulip</div>
+                            <div class="apy">
+                                <div class="a_text">APY:</div>
+                                <div class="a_number">0.000000%</div>
+                            </div>
+                            <div class="time">
+                                <div class="t_text">Time:</div>
+                                <div class="t_number">92:16:52</div>
+                            </div>
+                            <div class="select select_text">Select</div>
+                    </div>
+                    <div class="cmcr_boder cmcr_flower">
+                            <div class="circle"><img class="circle_img" src="./img/Group 2947.svg" alt=""></div>
+                            <div class="text">Pearl Flower</div>
+                            <div class="apy">
+                                <div class="a_text">APY:</div>
+                                <div class="a_number">0.000000%</div>
+                            </div>
+                            <div class="time">
+                                <div class="t_text">Time:</div>
+                                <div class="t_number">92:16:52</div>
+                            </div>
+                            <div class="select select_text">Select</div>
                     </div>
                 </div>
-                <div class="cmc_right">
-                    <div class="cmcr_cat">
-                        <div class="circle"><img src="./img/Group 2953.svg" alt=""></div>
-                        <div class="text">HelloKitty/TRX Pair Staking</div>
-                        <div class="apy">
-                            <div class="a_text">APY:</div>
-                            <div class="a_number">0.000000%</div>
-                        </div>
-                        <div class="time">
-                            <div class="t_text">Time:</div>
-                            <div class="t_number">92:16:52</div>
-                        </div>
-                        <div class="select">Select</div>
-                    </div>
-                    <div class="cmcr_rabit">
-                        <div class="circle"><img src="./img/Group 2958.svg" alt=""></div>
-                        <div class="text">USDT Rabit</div>
-                        <div class="apy">
-                            <div class="a_text">Comming soon</div>
-                            <div class="a_number">0.000000%</div>
-                        </div>
-                        <div class="time">
-                            <div class="t_text">Time:</div>
-                            <div class="t_number">92:16:52</div>
-                        </div>
-                        <div class="select">Select</div>
-                    </div>
-                    <div class="cmcr_staking">
-                        <div class="circle"><img src="./img/Group 2960.svg" alt=""></div>
-                        <div class="text">HelloKitty/TRX Pair Staking</div>
-                        <div class="apy">
-                            <div class="a_text">Comming soon</div>
-                            <div class="a_number">0.000000%</div>
-                        </div>
-                        <div class="time">
-                            <div class="t_text">Time:</div>
-                            <div class="t_number">Ended</div>
-                        </div>
-                        <div class="select">Select</div>
-                    </div>
-                    <div class="cmcr_tulip">
-                        <div class="circle"><img src="./img/Group 2946.svg" alt=""></div>
-                        <div class="text">TAI Tulip</div>
-                        <div class="apy">
-                            <div class="a_text">APY:</div>
-                            <div class="a_number">0.000000%</div>
-                        </div>
-                        <div class="time">
-                            <div class="t_text">Time:</div>
-                            <div class="t_number">92:16:52</div>
-                        </div>
-                        <div class="select">Select</div>
-                    </div>
-                    <div class="cmcr_flower">
-                        <div class="circle"><img src="./img/Group 2946.svg" alt=""></div>
-                        <div class="text">Pearl Flower</div>
-                        <div class="apy">
-                            <div class="a_text">APY:</div>
-                            <div class="a_number">0.000000%</div>
-                        </div>
-                        <div class="time">
-                            <div class="t_text">Time:</div>
-                            <div class="t_number">92:16:52</div>
-                        </div>
-                        <div class="select">Select</div>
-                    </div>
+                <!-- <div class="cmc_left">
+                </div> -->
+            </div>
+        </div>
+        <div class="c_footer">
+            <div class="cf_wrap">
+                <div class="cfw_left text">@Copyright 2020</div>
+                <div class="cfw_between">
+                    <div class="text text_contract">Contract audit</div>
+                    <div class="text text_smart">Smartcontract</div>
+                    <div class="text text_white">Whitepaper</div>
+                </div>
+                <div class="cfw_right">
+                    <div class="text telegram"><img src="./img/telegram (1).svg" alt=""></div>
+                    <div class="text twitter"><img src="./img/twitter (1).svg" alt=""></div>
+                    <div class="text medium"><img src="./img/medium.svg" alt=""></div>
                 </div>
             </div>
         </div>
-        <div class="c_footer"></div>
     </div>
 </body>
 </html>
