--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="c_menu"><img class="img_menu" src="./img/menu.png" alt=""></div>
         <div class="c_header">
             <div class="ch_logo"><img class="chl_img" src="./img/Group 2669.svg" alt=""></div>
             <div class="ch_toolbar">
@@ -46,83 +47,89 @@
                     <div class="cmtl_copy"></div>
                 </div>
             </div>
-            <div class="select_all">
-                <div class="select_text">
-                    Select active
-                </div>
-            </div>
             <div class="cm_contain">
-                <!-- <div class="cmc_left"> -->
-                <!-- </div> -->
-                <div class="cmc_right">
-                    <div class="cmcr_boder cmcr_cat">
-                            <div class="circle"><img class="circle_img" src="./img/Group 2953.svg" alt=""></div>
-                            <div class="text">HelloKitty/TRX Pair Staking</div>
-                            <div class="apy">
-                                <div class="a_text">APY:</div>
-                                <div class="a_number">0.000000%</div>
-                            </div>
-                            <div class="time">
-                                <div class="t_text">Time:</div>
-                                <div class="t_number">92:16:52</div>
-                            </div>
-                            <div class="select select_text">Select</div>
-                    </div>
-                    <div class="cmcr_boder cmcr_rabit">
-                            <div class="circle"><img class="circle_img" src="./img/Group 2958.svg" alt=""></div>
-                            <div class="text">USDT Rabit</div>
-                            <div class="apy">
-                                <div class="a_text">APY:</div>
-                                <div class="a_number">0.000000%</div>
-                            </div>
-                            <div class="time">
-                                <div class="t_text">Comming soon</div>
-                                <div class="t_number">92:16:52</div>
-                            </div>
-                            <div class="select select_text">Select</div>
-                    </div>
-                    <div class="cmcr_boder cmcr_staking">
-                            <div class="circle"><img class="circle_img" src="./img/Group 2960.svg" alt=""></div>
-                            <div class="text">HelloKitty/TRX Pair Staking</div>
-                            <div class="apy">
-                                <div class="a_text">APY:</div>
-                                <div class="a_number">0.000000%</div>
-                            </div>
-                            <div class="time">
-                                <div class="t_text">Time:</div>
-                                <div class="t_number">Ended</div>
-                            </div>
-                            <div class="select select_text">Select</div>
-                    </div>
-                    <div class="cmcr_boder cmcr_tulip">
-                            <div class="circle"><img class="circle_img" src="./img/Group 2946.svg" alt=""></div>
-                            <div class="text">TAI Tulip</div>
-                            <div class="apy">
-                                <div class="a_text">APY:</div>
-                                <div class="a_number">0.000000%</div>
-                            </div>
-                            <div class="time">
-                                <div class="t_text">Time:</div>
-                                <div class="t_number">92:16:52</div>
-                            </div>
-                            <div class="select select_text">Select</div>
-                    </div>
-                    <div class="cmcr_boder cmcr_flower">
-                            <div class="circle"><img class="circle_img" src="./img/Group 2947.svg" alt=""></div>
-                            <div class="text">Pearl Flower</div>
-                            <div class="apy">
-                                <div class="a_text">APY:</div>
-                                <div class="a_number">0.000000%</div>
-                            </div>
-                            <div class="time">
-                                <div class="t_text">Time:</div>
-                                <div class="t_number">92:16:52</div>
-                            </div>
-                            <div class="select select_text">Select</div>
+                <div class="cmc_left">
+                    <div class="select_all">
+                        <div class="select_text">
+                            Select active
+                        </div>
                     </div>
                 </div>
-                <!-- <div class="cmc_left">
-                </div> -->
+                <div class="cmc_right">
+
+                    <div class="top">
+                        <div class="cmcr_boder cmcr_cat">
+                                <div class="circle"><img class="circle_img" src="./img/Group 2953.svg" alt=""></div>
+                                <div class="text">HelloKitty/TRX Pair Staking</div>
+                                <div class="apy">
+                                    <div class="a_text">APY:</div>
+                                    <div class="a_number">0.000000%</div>
+                                </div>
+                                <div class="time">
+                                    <div class="t_text">Time:</div>
+                                    <div class="t_number">92:16:52</div>
+                                </div>
+                                <div class="select select_text">Select</div>
+                        </div>
+                        <div class="cmcr_boder cmcr_rabit">
+                                <div class="circle"><img class="circle_img" src="./img/Group 2958.svg" alt=""></div>
+                                <div class="text">USDT Rabit</div>
+                                <div class="apy">
+                                    <div class="a_text">APY:</div>
+                                    <div class="a_number">0.000000%</div>
+                                </div>
+                                <div class="time">
+                                    <div class="t_text">Comming soon</div>
+                                    <div class="t_number">92:16:52</div>
+                                </div>
+                                <div class="select select_text">Select</div>
+                        </div>
+                        <div class="cmcr_boder cmcr_staking">
+                                <div class="circle"><img class="circle_img" src="./img/Group 2960.svg" alt=""></div>
+                                <div class="text">HelloKitty/TRX Pair Staking</div>
+                                <div class="apy">
+                                    <div class="a_text">APY:</div>
+                                    <div class="a_number">0.000000%</div>
+                                </div>
+                                <div class="time">
+                                    <div class="t_text">Time:</div>
+                                    <div class="t_number">Ended</div>
+                                </div>
+                                <div class="select select_text">Select</div>
+                        </div>
+                    </div>
+                    <div class="bott">
+                        <div class="cmcr_boder cmcr_tulip">
+                                <div class="circle"><img class="circle_img" src="./img/Group 2946.svg" alt=""></div>
+                                <div class="text">TAI Tulip</div>
+                                <div class="apy">
+                                    <div class="a_text">APY:</div>
+                                    <div class="a_number">0.000000%</div>
+                                </div>
+                                <div class="time">
+                                    <div class="t_text">Time:</div>
+                                    <div class="t_number">92:16:52</div>
+                                </div>
+                                <div class="select select_text">Select</div>
+                        </div>
+                        <div class="cmcr_boder cmcr_flower">
+                                <div class="circle"><img class="circle_img" src="./img/Group 2947.svg" alt=""></div>
+                                <div class="text">Pearl Flower</div>
+                                <div class="apy">
+                                    <div class="a_text">APY:</div>
+                                    <div class="a_number">0.000000%</div>
+                                </div>
+                                <div class="time">
+                                    <div class="t_text">Time:</div>
+                                    <div class="t_number">92:16:52</div>
+                                </div>
+                                <div class="select select_text">Select</div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="cmc_left">
+                </div>
             </div>
         </div>
         <div class="c_footer">
