finish page home (3)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     </div>
             </div>
         </div>
+        <!-- <div class="img_foggy"><img src="./img/Group 2994.svg" alt=""></div> -->
         <div class="c_middle">
             <div class="cm_top">
                 <img class="cmt_img" src="./img/Group 2669.svg" alt="">
@@ -44,7 +45,7 @@
                 <div class="cmt_textUse">Use this referral link to share HelloKittySwap with your friends. Every friend will increase your commissions.</div>
                 <div class="cmt_link">
                     <input class="cmtl_input" type="text" >
-                    <div class="cmtl_copy"></div>
+                    <div class="cmtl_copy"><img src="./img/copy (1).svg" alt=""></div>
                 </div>
             </div>
             <div class="cm_contain">
