--- a/Page(3)/index-page(3).html
+++ b/Page(3)/index-page(3).html
@@ -5,34 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello-kitty</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="Style-page(3).css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <div class="c_menu"><img class="img_menu" src="./img/menu.png" alt=""></div>
+        <div class="c_menu"><img class="img_menu" src="../img/menu.png" alt=""></div>
         <div class="c_header">
-            <div class="ch_logo"><img class="chl_img" src="./img/Group 2669.svg" alt=""></div>
+            <div class="ch_logo"><img class="chl_img" src="../img/Group 2669.svg" alt=""></div>
             <div class="ch_toolbar">
-                    <img class="cht_img" src="./img/Group 2671.svg" alt="">
+                    <img class="cht_img" src="../img/Group 2671.svg" alt="">
                     <div class="cht_home" >Home</div>
                     <div class="cht_faq">FAQ</div>
                     <div class="cht_trx">Justswap TRX</div>
                     <div class="cht_nation">
                         <div class="chtn_circle" style="height: 35px;"></div>
                         <!-- <img class="ensign" src="./img/united-kingdom.png" alt=""> -->
-                        <img class="arrow" src="./img/down-arrow.svg" alt="">
+                        <img class="arrow" src="../img/down-arrow.svg" alt="">
                     </div>
             </div>
         </div>
         <!-- <div class="img_foggy"><img src="./img/Group 2994.svg" alt=""></div> -->
         <div class="c_middle">
             <div class="cm_top">
-                <img class="cmt_img" src="./img/Group 2669.svg" alt="">
+                <img class="cmt_img" src="../img/Group 2669.svg" alt="">
                 <div class="cmt_textio">HelloKittySwap.io</div>
                 <div class="cmt_textEarn">Earn Hello Kitty Tokens and Share Trading Fees Forever</div>
                 <div class="cmt_boder">
-                    <img class="cmtb_img" src="./img/Group 2671.svg" alt="">
+                    <img class="cmtb_img" src="../img/Group 2671.svg" alt="">
                     <div class="cmtb_single">
                         <div class="cmtbs_text">HelloKitty</div>
                         <div class="cmtbs_number">0.00000000</div>
@@ -45,7 +45,7 @@
                 <div class="cmt_textUse">Use this referral link to share HelloKittySwap with your friends. Every friend will increase your commissions.</div>
                 <div class="cmt_link">
                     <input class="cmtl_input" type="text" >
-                    <div class="cmtl_copy"><img src="./img/copy (1).svg" alt=""></div>
+                    <div class="cmtl_copy"><img src="../img/copy (1).svg" alt=""></div>
                 </div>
             </div>
             <div class="cm_contain">
@@ -60,7 +60,7 @@
 
                     <div class="top">
                         <div class="cmcr_boder cmcr_cat">
-                                <div class="circle"><img class="circle_img" src="./img/Group 2953.svg" alt=""></div>
+                                <div class="circle"><img class="circle_img" src="../img/Group 2953.svg" alt=""></div>
                                 <div class="text">HelloKitty/TRX Pair Staking</div>
                                 <div class="apy">
                                     <div class="a_text">APY:</div>
@@ -73,7 +73,7 @@
                                 <div class="select select_text">Select</div>
                         </div>
                         <div class="cmcr_boder cmcr_rabit">
-                                <div class="circle"><img class="circle_img" src="./img/Group 2958.svg" alt=""></div>
+                                <div class="circle"><img class="circle_img" src="../img/Group 2958.svg" alt=""></div>
                                 <div class="text">USDT Rabit</div>
                                 <div class="apy">
                                     <div class="a_text">APY:</div>
@@ -86,7 +86,7 @@
                                 <div class="select select_text">Select</div>
                         </div>
                         <div class="cmcr_boder cmcr_staking">
-                                <div class="circle"><img class="circle_img" src="./img/Group 2960.svg" alt=""></div>
+                                <div class="circle"><img class="circle_img" src="../img/Group 2960.svg" alt=""></div>
                                 <div class="text">HelloKitty/TRX Pair Staking</div>
                                 <div class="apy">
                                     <div class="a_text">APY:</div>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="bott">
                         <div class="cmcr_boder cmcr_tulip">
-                                <div class="circle"><img class="circle_img" src="./img/Group 2946.svg" alt=""></div>
+                                <div class="circle"><img class="circle_img" src="../img/Group 2946.svg" alt=""></div>
                                 <div class="text">TAI Tulip</div>
                                 <div class="apy">
                                     <div class="a_text">APY:</div>
@@ -114,7 +114,7 @@
                                 <div class="select select_text">Select</div>
                         </div>
                         <div class="cmcr_boder cmcr_flower">
-                                <div class="circle"><img class="circle_img" src="./img/Group 2947.svg" alt=""></div>
+                                <div class="circle"><img class="circle_img" src="../img/Group 2947.svg" alt=""></div>
                                 <div class="text">Pearl Flower</div>
                                 <div class="apy">
                                     <div class="a_text">APY:</div>
@@ -142,9 +142,9 @@
                     <div class="text text_white">Whitepaper</div>
                 </div>
                 <div class="cfw_right">
-                    <div class="text telegram"><img src="./img/telegram (1).svg" alt=""></div>
-                    <div class="text twitter"><img src="./img/twitter (1).svg" alt=""></div>
-                    <div class="text medium"><img src="./img/medium.svg" alt=""></div>
+                    <div class="text telegram"><img src="../img/telegram (1).svg" alt=""></div>
+                    <div class="text twitter"><img src="../img/twitter (1).svg" alt=""></div>
+                    <div class="text medium"><img src="../img/medium.svg" alt=""></div>
                 </div>
             </div>
         </div>
