--- a/Page(4)/index.html
+++ b/Page(4)/index.html
@@ -34,15 +34,50 @@
             </div>
             <div class="cm_information">
                 <div class="cmi_text">
-                    <div></div>
-                    <div></div>
+                    <div class="text_left">
+                        <div class="text">My state:</div>
+                        <div class="number">0.000000</div>
+                    </div>
+                    <div class="text_right">
+                        <div class="text">APY:</div>
+                        <div class="number">12.0283%</div>
+                    </div>
                 </div>
-                <div class="cmi_text">
-                    <div></div>
+                <div class="cmi_recipe">
+                    <div class="text_price">Price:</div>
+                    <div class="recipe">
+                        1
+                        <img class="r_img" src="../img/Group 2671.svg" alt="">
+                        = 3140.9126$ - 1 USDT = 0.9579$
+                    </div>
                 </div>
             </div>
-            <div class="cm_row"></div>
-            <div class="cm_unstake"></div>
+            <div class="cm_row">
+                <div class="cmr_boder">
+                    <div class="text">HelloKitty earned</div>
+                    <div class="number">0.00000000</div>
+                    <div class="boder_harvest">
+                        <div class="harvest">Harvest</div>
+                    </div>
+                </div>
+                <div class="cmr_boder">
+                    <div class="text">HelloKitty/TRX staked</div>
+                    <div class="number">0.00000000</div>
+                    <div class="boder_harvest">
+                        <div class="harvest">Stake</div>
+                    </div>
+                </div>
+                <div class="cmr_boder">
+                    <div class="text">Ref earned</div>
+                    <div class="number">0.00000000</div>
+                    <div class="boder_harvest">
+                        <div class="harvest">Harvest</div>
+                    </div>
+                </div>
+            </div>
+            <div class="cm_unstake">
+                <div class="cmu_text">Harvest & Unstake</div>
+            </div>
         </div>
         <div class="c_footer">
             <div class="cf_wrap">
