--- a/Page(4)/index.html
+++ b/Page(4)/index.html
@@ -79,6 +79,7 @@
                 <div class="cmu_text">Harvest & Unstake</div>
             </div>
         </div>
+        
         <div class="c_footer">
             <div class="cf_wrap">
                 <div class="cfw_left text">@Copyright 2020</div>
@@ -91,6 +92,61 @@
                     <div class="text telegram"><img src="../img/telegram (1).svg" alt=""></div>
                     <div class="text twitter"><img src="../img/twitter (1).svg" alt=""></div>
                     <div class="text medium"><img src="../img/medium.svg" alt=""></div>
+                </div>
+            </div>
+        </div>
+        <div class="c_deposit">
+            <div class="cd_border">
+                <div class="cdb_header">
+                    <div class="cdbh_circle">
+                        <img class="cdbhc_img" src="../img/money.svg" alt="">
+                    </div>
+                </div>
+                <div class="cdb_close">
+                    <img src="../img/close (2).svg" alt="">
+                </div>
+                <div class="cdb_content">
+                    <div class="text_deposit">DEPOSIT</div>
+                    <div class="text_input">Input amount:</div>
+                    <div class="cdbc_input">    
+                        <input type="text" >
+                    </div>
+                    <div class="text_hello">
+                        <div class="text">HelloKitty/TRX LP Balance:</div>
+                        <div class="number">0.0000</div>
+                    </div>
+                    <div class="cdbc_button">
+                        <div class="button_cancel">Cancel</div>
+                        <div class="button_confirm">Confirm</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="c_warning">
+            <div class="cw_border">
+                <img class="img_stripe" src="../img/stripe.jpeg" alt="">
+                <div class="cwb_header">
+                    <div class="cwbh_circle">
+                        <img class="cwbhc_img" src="../img/warning.svg" alt="">
+                    </div>
+                </div>
+                <div class="cwb_close">
+                    <img src="../img/close (2).svg" alt="">
+                </div>
+                <div class="cwb_content">
+                    <div class="text_warning">WARNING!</div>
+                    <div class="text_you">
+                        <!-- <div class="text"> -->
+                        You must install TronLink chrome extension to enjoy on 
+                        <b>HelloKitty.io!</b> 
+                        <!-- </div> -->
+                    </div>
+                    <div class="text_please">
+                        Please visit their <a href="">TronLink website</a> and install it.
+                    </div>
+                    <div class="cwbc_button">
+                        <div class="button_close">Close</div>
+                    </div>
                 </div>
             </div>
         </div>
