--- a/Page(5)/index.html
+++ b/Page(5)/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="cmc_row">   
                     <div class="cmcr_border">
-                        <div class="cmcrb_question">
+                        <div class="cmcrb_question row_last">
                             <div class="question_text">Why are there so many delays in displaying the numbers?</div>
                             <div><img class="question_img" src="../img/next (1).svg" alt=""></div>
                         </div>
